# rinha-2026-go

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  autoresearch.sh  docker-compose-host.yml  docker-compose-tcp.yml  docker-compose.yml  go.mod  go.sum  haproxy.cfg  info.json  nginx.conf  profile.sh
.github/workflows/: release.yml
cmd/bench/: main.go
cmd/build_index/: main.go
cmd/find_candidates/: main.go
cmd/server/: main.go
internal/config/: config.go
internal/dataset/: dataset.go
internal/httpresp/: httpresp.go
internal/ivfsearch/: bridge.c  bridge.go  bridge.h  ivfsearch.go  ivfsearch_amd64.s  ivfsearch_decl.go
internal/jsonparse/: jsonparse.go
internal/mccrisk/: mccrisk.go
internal/vectorizer/: vectorizer.go
src/: build_index.c  common.h  config.c  config.h  dataset.c  dataset.h  http_responses.c  http_responses.h  iouring_server.c  iouring_server.h  ivf_search.c  ivf_search.h  main.c  mcc_risk.c  mcc_risk.h  vectorizer.c  vectorizer.h
